--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "express": "^4.21.2",
-    "mongoose": "^8.9.3",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.7",
+    "mongoose": "^8.9.3"
   }
 }
